# solaire

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  linux_cmake.sh  toolchain_linux_clang.cmake
shaders/: fshaderTest.glsl  vshaderTest.glsl
src/: CMakeLists.txt  SolaireConfig.h.in  app.cpp  app.h  app_config.cpp  app_config.def  app_config.h  app_initialization.cpp  app_initialization.h  app_logic.cpp  app_logic.h  clock.cpp  clock.h  graphics_app.cpp  graphics_app.h  main.cpp  platform_services.h
src/app/: CMakeLists.txt  app.cpp  app.h  app_config.cpp  app_config.h  app_logic.cpp  app_logic.h  app_services.h  clock.cpp  clock.h
src/common/: CMakeLists.txt  macros.h  types.h
src/cpputils/: file.h
src/jsonutils/: .#document.h
src/kato/: CMakeLists.txt  linux_platform.cpp  linux_platform.h  platform_services.h
toolchains/: Toolchain-Linux-clang.cmake
